Test/module/cycle.expected.txt
ppap> Copyright (c) 2021-2026, Kijeong Lim
ppap> All rights reserved
ppap =<< ppap >>= exec (Hol.main --test)
Hol =<< Hol> Compiling Test.module.cycle ( Test/module/cycle.hol, interpreted )
1:1: error: [HolBETA2-ModuleError]
   |                            
 1 | import Test.module.cycle_a.
   | ^                          
Import cycle detected: Test.module.cycle_b -> Test.module.cycle_a -> Test.module.cycle_a.

Hol =<< Hol >>= quit
